app/globals.css
@import 'tailwindcss';

@theme inline {
  --font-nunito: var(--font-nunito);

  --color-cv-orange: oklch(77.73% 0.0889 62);
  --color-cv-orange-hexa: #e0aa7bff;
  --color-cv-blanc: oklch(97.91% 0 0);
  --color-cv-pill: oklch(51.73% 0 0);
  --color-cv-anthracite: oklch(39.42% 0 0);
  --color-cv-gris-clair: oklch(89.45% 0 0);
}

@utility grid-cols-phi {
  @apply grid-cols-[38.2%_61.8%];
}

